[package]
name = "gui"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vek = "0.12"
minifb = "0.25"
andrew = "0.3"
piet = "0.6.2"
piet-cairo = "0.6.2"
cairo-rs = { version = "0.16.7", default-features = false }

[profile.dev]
opt-level = 2
